# bullvsbear

./: README.md
server/: Cargo.toml
server/src/: debate.rs  llm.rs  main.rs  market.rs  store.rs
web/app/: globals.css  layout.tsx  page.tsx
web/app/arena/: page.tsx
web/app/debate/[id]/: page.tsx
web/app/leaderboard/: page.tsx
web/components/: PointsBadge.tsx
web/lib/: api.ts  user.ts
